--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/JveGuo/node-cli#readme",
   "dependencies": {
     "commander": "^9.4.1",
+    "download-git-repo": "^3.0.2",
     "inquirer": "^8.2.5"
   }
 }
