--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "commander": "^9.4.1",
     "download-git-repo": "^3.0.2",
-    "inquirer": "^8.2.5"
+    "inquirer": "^8.2.5",
+    "ora": "^5.4.1"
   }
 }
