--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/JveGuo/node-cli#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
     "commander": "^9.4.1",
     "download-git-repo": "^3.0.2",
+    "fs-extra": "^11.1.0",
     "inquirer": "^8.2.5",
     "ora": "^5.4.1"
   }
